--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.14.0",
     "vue": "^3.1.1",
+    "vue-advanced-cropper": "^2.5.0",
     "vue-router": "^4.0.8",
     "vuex": "^4.0.1"
   },
