--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/vue-fontawesome": "^3.0.0-4",
     "core-js": "^3.14.0",
     "vue": "^3.1.1",
     "vue-advanced-cropper": "^2.5.0",
