--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "scripts": {
     "createTables": "cd database && yarn run createTables",
+    "loadInitialData": "cd server && node loadInitialData.js",
     "dev": "concurrently --kill-others \"cd server && yarn run dev\" \"cd client && yarn run serve\"",
     "initial": "yarn install && cd client && yarn install && cp .env_start .env && cd .. && cd database && yarn install && cp .env.production .env && cd .. && cd server && yarn install && cp .env.production .env",
     "build": "cd client && yarn run build",
