--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/vue-fontawesome": "^3.0.0-4",
     "core-js": "^3.14.0",
+    "lodash": "^4.17.21",
     "vue": "^3.1.1",
     "vue-advanced-cropper": "^2.5.0",
     "vue-router": "^4.0.8",
